<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">App Portfolio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="portfolio_spotify_streamer">Spotify Streamer</string>
    <string name="portfolio_scrores_app">Scores App</string>
    <string name="portfolio_library_app">Library App</string>
    <string name="portfolio_build_it_bigger">Build it Bigger</string>
    <string name="portfolio_xyz_reader">XYZ Reader</string>
    <string name="portfolio_capstone">Capstone: My Own App</string>


</resources>
