<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_spotify_streamer"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_red"
        android:paddingBottom="40dp"
        android:paddingTop="40dp"
        android:text="@string/portfolio_spotify_streamer"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_scores_app"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_cyan"
            android:paddingBottom="40dp"
            android:paddingTop="40dp"
            android:text="@string/portfolio_scrores_app"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_library_app"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_amber"
            android:paddingBottom="40dp"
            android:paddingTop="40dp"
            android:text="@string/portfolio_library_app"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/button_build_it_bigger"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_purple"
        android:paddingBottom="40dp"
        android:paddingTop="40dp"
        android:text="@string/portfolio_build_it_bigger"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/butten_xyz_reader"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_lime"
            android:paddingBottom="40dp"
            android:paddingTop="40dp"
            android:text="@string/portfolio_xyz_reader"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_capstone"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_pink"
            android:paddingBottom="40dp"
            android:paddingTop="40dp"
            android:text="@string/portfolio_capstone"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>
